   * renamed "Advanced Mode" button on sound preferences to "Advanced Options",
     and "Normal Mode" to "Standard Options"
   * fix some inconsistencies between mouse selection and "next unit" selection
   * double-click in dialog now triggers a "press button" sound
   * fix an exploit using the "black stripes" of a unit with teleport ability
     to detect enemy villages under fog
 * WML engine:
   * extended [store_side] behavior, so that it additionally writes the following:
     fog, shroud, colour, user_team_name, controller, recruit (the recruit list),
     village_gold (the income per-village).
   * extended [modify_side] behavior, to contemplate fog, shroud, controller,
     recruit and village_gold settings.
   * new key "contains=" in [variable] conditions to check the presence of a
     substring in a variable value
   * new tag [debug_message], which takes as paramaters "logger=" and "message="
     to silently output messages to stdout or stderr.
   * new key "variation=" in [move_unit_fake] statements to add the possibility
     of making a fake unit look like one of its variation while moving - this
     also reflects in a change to the MOVE_UNIT macro, which now can use gender
     and variation too.
   * maps now have a user definable border
   * Changed the mute hotkey from ctrl-m to ctrl-alt-m.
   * On victory, all old saves for the scenario except the start one
     are now deleted (rather than just autosaves as formerly). This
     is done before replay saving, if that is enabled. The preference
     name has changed from delete_autosaves to delete_saves.
   * Animation engine allow multiple type of frames (a la "missile frames")
     for all types of anims, you can have multiple such anims using different
     frame names
   * a new type of animation is triggered when a unit is selected. (WML
     support to come shortly)
   * in story [image,] a new key scaled=yes/no (default=no) allow to scale the
     image like the background is.