@@ -60,6 +60,7 @@ Version 1.3.9+svn:
       is done before replay saving, if that is enabled. The preference
       name has changed from delete_autosaves to delete_saves.
     * Double-click in dialog now triggers a "press button" sound.
+    * Fix the wrong "(1) turn to reach" on already captured village.
 
 Version 1.3.9:
   * Campaigns
